# libsndfile

./: .bzrignore  .editorconfig  .gitignore  .travis.yml  AUTHORS  Building-for-Android.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  FAQ.html  Make.bat  Makefile.am  NEWS  NEWS.OLD  README  README.md  README.md.orig  SECURITY.md  acinclude.m4  appveyor.yml  autogen.sh  axml.c  azure-pipelines.yml  binheader_readf_check.py  build-test-tarball.mk.in  bw64.c  command.c  common.h  configure.ac  development.html  extended-build.mk  formats.html  index.html  libsndfile.css  libsndfile.spec.in  make_bw64_test.sh  make_lite.py  mingw-configure.sh  reconfigure.mk  (+10 more)
Octave/: Makefile.am  PKG_ADD  Readme.txt  format.cc  format.h  octave_test.m  octave_test.sh  sfread.cc  sfwrite.cc  sndfile.cc  sndfile_load.m  sndfile_play.m  sndfile_save.m
examples/: Makefile.am  common.c  cooledit-fixer.c  copy_data.c  copy_data.h  generate.c  generate.cs  list_formats.c  make_sine.c  paf_write.c  sfprocess.c  sndfile-bwf-set.c  sndfile-cmp.c  sndfile-convert.c  sndfile-data-trim.c  sndfile-info.c  sndfile-jackplay.c  sndfile-loopify.c  sndfile-metadata-get.c  sndfile-metadata-set.c  sndfile-play.c  sndfile-to-text.c  sndfilehandle.cc  test-sndfile-bwf-set.py  test-sndfile-metadata-set.py
programs/: CMakeLists.txt  Makefile.am  common.c  common.h  sndfile-cmp.c  sndfile-concat.c  sndfile-convert.c  sndfile-deinterleave.c  sndfile-info.c  sndfile-interleave.c  sndfile-metadata-get.c  sndfile-metadata-set.c  sndfile-play.c  sndfile-salvage.c  test-sndfile-metadata-set.py
regtest/: Makefile  Makefile.am  Readme.txt  checksum.c  database.c  database.h  regtest.c  sndfile-regtest.c
src/: CMakeLists.txt  Makefile.am  adpcms.c  adpcms.h  aiff.c  alac.c  alaw.c  au.c  au.h  au_g72x.c  audio_detect.c  avr.c  binheader_writef_check.py  broadcast.c  caf.c  cart.c  chanmap.c  chanmap.h  chunk.c  command.c  common.c  common.h  config.h.cmake  create_symbols_file  create_symbols_file.c  create_symbols_file.py  create_symbols_file.sh  dither.c  double64.c  dwd.c  dwvw.c  file_io.c  flac.c  float32.c  float_cast.h  g72x.c  gsm610.c  htk.c  id3.c  ima_adpcm.c  (+81 more)
src/ALAC/: ALACAudioTypes.h  ALACBitUtilities.c  CMakeLists.txt  EndianPortable.c  EndianPortable.h  ag_dec.c  ag_enc.c  alac_codec.h  alac_decoder.c  alac_decoder.h  alac_encoder.c  alac_encoder.h  dp_dec.c  dp_enc.c  dplib.h  matrix_dec.c  matrix_enc.c  matrixlib.h
src/FLAC/: Makefile.am  README.txt  bitbuffer.c  lpc.c  md5.c  metadata_iterators.c  metadata_object.c  ogg_encoder_aspect.c  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c
src/FLAC/FLAC/: Makefile.am  format.h  metadata.h  stream_decoder.h  stream_encoder.h
src/FLAC/ia32/: Makefile.am  Makefile.in
src/FLAC/include/: Makefile  Makefile.am  Makefile.in
src/FLAC/include/FLAC/: Makefile.am  metadata.h
src/FLAC/include/private/: Makefile  Makefile.in  bitbuffer.h  float.h  ogg_encoder_aspect.h
src/FLAC/include/protected/: Makefile  Makefile.in  stream_encoder.h
src/FLAC/include/share/: Makefile.am  alloc.h  getopt.h
src/FLAC/include/share/grabbag/: file.h
src/FLAC/include/test_libs_common/: metadata_utils.h
src/FLAC/ppc/: Makefile  Makefile.in
src/FLAC/ppc/as/: Makefile  Makefile.am  Makefile.in
src/FLAC/ppc/gas/: Makefile  Makefile.am  Makefile.in
src/FLAC/share/: Makefile.am
src/FLAC/share/getopt/: Makefile.am  getopt.c
src/FLAC/share/grabbag/: Makefile.am  cuesheet.c  picture.c
src/FLAC/share/replaygain_analysis/: Makefile.am
src/FLAC/share/replaygain_synthesis/: Makefile.am  replaygain_synthesis.c
src/FLAC/share/utf8/: Makefile.am  utf8.c
src/FLAC/src/: Makefile.am
src/FLAC/src/libFLAC/: Makefile.am  bitreader.c  bitwriter.c  cpu.c  format.c  metadata_iterators.c  metadata_object.c  stream_decoder.c  stream_encoder.c  stream_encoder_framing.c
src/FLAC/src/libFLAC/ia32/: Makefile.am
src/FLAC/src/share/: Makefile.am
src/FLAC/src/test_grabbag/: Makefile.am
src/FLAC/src/test_libFLAC/: Makefile.am  metadata.h  metadata_manip.c  metadata_object.c
src/FLAC/src/test_libs_common/: Makefile.am
src/FLAC/src/test_seeking/: Makefile.am  main.c
src/FLAC/src/test_streams/: Makefile.am
src/FLAC/test/: Makefile.am
src/FLAC/test_libFLAC/: Makefile.am  bitbuffer.c  format.c  metadata.c  metadata.h  metadata_object.c
src/FLAC/test_libs_common/: Makefile.am
src/FLAC/tests/: Makefile.am  bitbuffer.h  decoders.c  encoders.c  metadata_manip.c
src/G72x/: CMakeLists.txt  ChangeLog  Makefile.am  g721.c  g723_24.c  g723_40.c  g72x.c  g72x.h  g72x_priv.h  g72x_test.c
src/GSM610/: CMakeLists.txt  ChangeLog  add.c  code.c  decode.c  gsm610_priv.h  gsm_create.c  gsm_decode.c  gsm_destroy.c  gsm_encode.c  gsm_option.c  long_term.c  lpc.c  preprocess.c  rpe.c  short_term.c  table.c
src/OGG/: Makefile.am  README  README.txt  bitwise.c  framing.c
src/OGG/include/ogg/: Makefile.am  config_types.h  ogg.h  os_types.h
src/VORBIS/: CHANGES  Makefile.am
src/VORBIS/include/vorbis/: Makefile.am  codec.h  vorbisfile.h
src/VORBIS/lib/: Makefile.am  block.c  codebook.c  codec_internal.h  envelope.c  floor0.c  floor1.c  info.c  lookup_data.h  lpc.c  lsp.c  mapping0.c  mdct.c  misc.c  misc.h  os.h  psy.c  res0.c  scales.h  sharedbook.c  window.c  window.h
src/VORBIS/lib/modes/: setup_16.h  setup_22.h
src/VORBIS/test/: Makefile.am  test.c  util.c  util.h  write_read.c  write_read.h
tests/: CMakeLists.txt  Makefile.am  aiff_rw_test.c  alaw_test.c  benchmark.tpl  channel_test.c  checksum_test.c  chunk_test.c  command_test.c  command_test.def  command_test.tpl  compression_size_test.c  cpp_crack_test.cc  cpp_test.cc  cue_test.c  dft_cmp.c  dft_cmp.h  dither_test.c  dwvw_test.c  error_test.c  external_libs_test.c  fix_this.c  floating_point_test.c  floating_point_test.def  floating_point_test.tpl  format_check_test.c  generate.c  generate.h  header_test.c  header_test.tpl  headerless_test.c  largefile_test.c  locale_test.c  long_read_write_test.c  lossy_comp_test.c  misc_test.c  mp3_test.c  multi_file_test.c  ogg_opus_test.c  ogg_test.c  (+32 more)
(+157 files in other folders)
